--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,7 +7,7 @@
     <body>
         <h1>pasta</h1>
         <img src="../images/pasta.jpg" alt="pasta logo" height="683" width="1024">
-       <h3>Discription:</h3>
+       <h3>Discription</h3>
        <p>pasta is a delicious dish made with tomatoes, onion, garlic and dried hurbs. making italian style pasta is easy and quick for breakfast.
         you can use fresh tomatoes, canned tomatoes or tomato paste to make souce.
         In this blog i have shared simple pasta recipe. You can serve it with garlic bread,
