--- a/recipes/Icecream.html
+++ b/recipes/Icecream.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./cascade.css">
         <meta charset="UTF-8">
         <title></title>
     </head>
-    <body>
-        <h1>Icecream</h1>
+    <body id="page">
+        <h1 class="heading">Icecream</h1>
         <img src="../images/Icecream.webp" alt="Icecream logo" height="683" width="1024">
+        <h3 class="sub-heading">Discription</h3>
         <p>When was the last time you made homemade ice cream? If it wasn’t this summer, it was wayyy too long ago. 
             Break out your ice cream maker, and make this homemade ice cream recipe stat! You can buy vanilla ice cream at any grocery store, 
             but it’ll never taste as good as the stuff you make yourself. 
@@ -15,8 +17,8 @@
             Full disclosure, there are a few hands-off parts of this recipe that require some patience, but once you taste this homemade ice cream, 
             I think you’ll agree that every second of waiting was worth it. It really is the best summer treat.</p>
 
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="h3">Ingredients</h3>
+        <ul class="ul">
             <li>2 cups mashed fresh strawberries</li>
             <li>2 cups whole milk</li>
             <li>2 cups heavy cream</li>
@@ -26,8 +28,8 @@
             <li>2 drops red food coloring (Optional)</li>
         </ul>
 
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="steps">Steps</h3>
+        <ol class="ol">
             <li>Gather all ingredients.</li>
 
             <li>Combine strawberries, milk, cream, sugar, vanilla, salt, and food coloring in a large bowl.</li>
