--- a/recipes/Keylimepie.html
+++ b/recipes/Keylimepie.html
@@ -1,13 +1,14 @@
 <!DOCTYPE>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./cascade.css">
         <meta charset="UTF-8">
         <title></title>
     </head>
-    <body>
-        <h1>Key lime pie</h1>
-        <img src="../images/Keylimepie.webp" alt="Key lime pie logo">
-        <h3>Discription</h3>
+    <body id="page">
+        <h1 class="heading">Key lime pie</h1>
+        <img src="../images/Keylimepie.webp" alt="Key lime pie logo" height="683" width="1024">
+        <h3 class="sub-heading">Discription</h3>
         <p>This quick and easy key lime pie recipe starts with a graham cracker crust and is filled with a mixture of egg yolks, 
             sweetened condensed milk, key lime juice & zest. Topped with fresh whipped cream and a lime twist garnish, 
             it’s a refreshing pie that tastes like the tropics and is a must-make this summer!</p>
@@ -15,16 +16,16 @@
         <p>Key lime pie dates back to the late 1800s in the Florida Keys. Modern refrigeration wasn’t available at the time, 
             so fresh milk wasn’t a common commodity. Instead, canned milk was widely used. As a result, this incredibly easy pie came to be.</p> 
         
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="h3">Ingredients</h3>
+        <ul class="ul">
             <li>Sweetened condensed milk</li>
             <li>Key lime juice</li>
             <li>Sour cream</li>
             <li>Lime zest</li>
             <li>Graham cracker crust</li>
         </ul> 
-        <h3>Ingredients</h3>  
-        <ol>
+        <h3 class="steps">Steps</h3>  
+        <ol class="ol">
             <li>Preheat oven to 350 degrees F.</li>
 
             <li>Make the Filling: Whisk the lime zest and egg yolks in a medium bowl for 2 minutes. 
