--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./cascade.css">
         <meta charset="UTF-8">
-        <title></title>
+        <title>Homepage</title>
+        
     </head>
-    <body>
-        <h1>pasta</h1>
+    <body id="page">
+        <h1 class="heading">pasta</h1>
         <img src="../images/pasta.jpg" alt="pasta logo" height="683" width="1024">
-       <h3>Discription</h3>
+       <h3 class="sub-heading">Discription</h3>
        <p>pasta is a delicious dish made with tomatoes, onion, garlic and dried hurbs. making italian style pasta is easy and quick for breakfast.
         you can use fresh tomatoes, canned tomatoes or tomato paste to make souce.
         In this blog i have shared simple pasta recipe. You can serve it with garlic bread,
         roast chicken and season salad for filling meal. learn how to make delicious pasta with step by step process.
         This is one dish which i make quite often. you can make this pasta under 30 minutes which makes it family faviourate meal on busy days.
        </p>
-       <h3>Ingredients</h3>
-       <ul>
+       <h3 class="h3">Ingredients</h3>
+       <ul class="ul">
         <li>Pasta</li>
         <li>Tomatoes</li>
         <li>Tomato paste</li>
@@ -24,15 +26,9 @@
         <li>Onion</li>
         <li>Dried Hurbs</li>
        </ul>
-       <h3>Steps</h3>
-       <p>1)Bring a large pot of water to a boil and add a generous amount of salt. Cook the penne pasta until al dente (around 8-10 minutes).</p>
-       <p>2)Put the oil, fresh and dried herbs and garlic in a skillet (frying pan) and saute the garlic until fragrant.</p>
-       <p>3)Meanwhile, add the pureed tomatoes (passata) and tomato paste and stir to combine. 
-        Gently simmer the sauce until the penne pasta is al dente, about 8 minutes.</p>
-       <p>Reserve 1 cup of pasta water, drain the rest and add the pasta to the sauce.</p>
-       <p>Toss or stir the pasta to coat in the sauce, add a little splash of reserved pasta water to help emulsify the sauce. 
-        When coated add in some fresh chopped basil and stir, serve.</p>
-        <ol>
+       <h3 class="steps">Steps</h3>
+       
+        <ol class="ol">
             <li>Fill a large pot with 2 liters of water.
                 Add 1 tablespoon of salt to the water (this helps season the pasta as it cooks).
                 Bring the water to a rolling boil over high heat.</li>
