--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <title>odin-recipes</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/pasta.html">pasta</a>
-        </li>
-
+<body id="main">
+    <div class="h1">
+        <h1>Odin Recipes</h1>
+    </div>
+    <p class="p">This is list of some of my recipes</p>
+    <ul class="ul">
+        <li><a href="recipes/pasta.html">pasta</a></li>
         <li><a href="recipes/Keylimepie.html">Key lime pie</a></li>
         <li><a href="recipes/Icecream.html">Icecream</a></li>
     </ul>
+
+
     
     
 </body>
